--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/ShowChampionship.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/ShowChampionship.razor
@@ -41,7 +41,7 @@ else
     private Championship CurrentChampionship { get; set; }
 
     
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         CurrentChampionship = ChampionshipService.GetWithAllIncludes(Id);
     }
