--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Skills/CreateSkill.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Skills/CreateSkill.razor
@@ -37,6 +37,9 @@ Create new skill:<br/>
     private void HandleValidSubmit()
     {
         SkillService.Create(_skill);
+        var org = _skill.Organizer;
+        _skill = new Skill();
+        _skill.Organizer = org;
         Refresh?.Invoke();
     }
 
