--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/CreateTournament.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/CreateTournament.razor
@@ -39,7 +39,7 @@ Create new tournament
 
     private readonly Tournament _tournament = new Tournament();
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         SetupTournamentForCreation();
     }
