--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Components/CreateOrganizerIfNotCreated.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Components/CreateOrganizerIfNotCreated.razor
@@ -25,8 +25,8 @@
                 TeamsEnabled = true
             };
 
-            OrganizerService.Create(organizer);
-            organizer = OrganizerService.GetByName(organizerName);
+            var organizerId = OrganizerService.Create(organizer);
+            organizer = OrganizerService.GetById(organizerId);
 
             var defaultSkill = new Skill{ Name = "None", Order = 0, Organizer = organizer};
             var defaultTeam = new Team{ Name = "None", Organizer = organizer};
