--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Skills/CreateSkill.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Skills/CreateSkill.razor
@@ -13,7 +13,7 @@
             <DataAnnotationsValidator/>
             <ValidationSummary/>
 
-            <InputText id="name" @bind-Value="_skill.Name" placeholder="Add new level"/>
+            <InputText id="name" @bind-Value="_skill.Name" placeholder="Add new skill"/>
             <InputNumber id="order" @bind-Value="_skill.Order"/>
 
             <button class="oi oi-check" type="submit" style="height: 27px"></button>
