--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Skills/Skills.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Skills/Skills.razor
@@ -11,7 +11,7 @@
 
 <br/>
         <br/>
-        <div style="font-size: larger">Levels:</div> 
+        <div style="font-size: larger">Skills:</div> 
         <div>
             <ul class="nav flex-column">
                 <li class="nav-item px-3">
