--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Competitors/EditCompetitor.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Competitors/EditCompetitor.razor
@@ -37,7 +37,7 @@
 
             <div style="font-size: x-large">
                 <button class="oi oi-check" type="submit" style="width: 250px">
-                    <span style="padding-left: 10px">@(_editState ? "Edit" : "Update")</span>
+                    <span style="padding-left: 10px">@(_editState ? "Save" : "Update")</span>
                 </button>
                 </div>
             <br/>
