--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/Championships.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/Championships.razor
@@ -15,7 +15,7 @@
             <span class="responsiveColumn">
                 <h2>Championships</h2>
 
-                <p>Championship to host tournaments</p>
+                <p>Championships to host tournaments</p>
                 <br/>
                 <div style="font-size: large">
                     <button class="oi oi-plus" style="width: 250px" @onclick="@(() => SelectChampionship(null))">
