--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Components/EditSkill.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Components/EditSkill.razor
@@ -12,7 +12,8 @@
         <DataAnnotationsValidator/>
         <ValidationSummary/>
         <InputText id="skill-name" @bind-Value="Skill.Name" placeholder="@Skill.Name"/>
-        <InputNumber id="skill-order" @bind-Value="Skill.Order" placeholder="@Skill.Order"/><button class="oi oi-check" type="submit" style="height: 27px"></button>
+        <InputNumber id="skill-order" @bind-Value="Skill.Order" placeholder="@Skill.Order"/>
+        <button class="oi oi-check" type="submit" style="height: 27px"></button>
     </EditForm>
 }
 else
