--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
@@ -2,33 +2,31 @@
 @using ChampionshipManager.Db.Models
 @using ChampionshipManager.BusinessLayer.Services
 
-
-@inject AuthenticationStateProvider AuthenticationStateProvider
 @inject TournamentService TournamentService
+@inject GameService GameService
 
-@if (_tournament == null)
-{
-    <div>Something went wrong, please go <a href="/Championship/@ChampionshipId">back</a></div>
-}
-else
-{
-    <h3>@_tournament.Name</h3>
-    <div>Competitors:</div>
-    @foreach (var competitor in _tournament.Competitors)
-    {
-        <div>@competitor.Name</div>
-    }
-    <br/>
-    
-    <div>Games:</div>
-    @foreach (var game in _tournament.Games)
-    {
-        <div>@game.PlayerOne.Name againts @game.PlayerTwo.Name</div>
-        <div>@game.PlayerOneScore : @game.PlayerTwoScore</div>
-    }
-    
-    <div><a href="/Championship/@ChampionshipId">Back</a></div>
-}
+<div class="row">
+    <div class="responsiveColumn" style="font-size: larger">
+
+        @foreach (var game in Games)
+        {
+            <button style="font-size: large;width: 250px" @onclick="@(() => SelectGame(game))">
+                <span>@game.PlayerOne.Name</span> vs <span>@game.PlayerTwo.Name</span>
+                <br/>
+                <span>@game.PlayerOneScore</span> : <span>@game.PlayerTwoScore</span>
+            </button>
+        }
+    </div>
+
+    <div class="responsiveColumn second" style="font-size: larger">
+        @if (SelectedGame != null)
+        {
+            <EditGame Refresh="StateHasChanged" SelectedGame="@SelectedGame"></EditGame>
+        }
+
+    </div>
+
+</div>
 
 
 @code{
@@ -39,16 +37,18 @@ else
     [Parameter]
     public string TournamentId { get; set; }
 
+    private List<Game> Games;
 
-    private Tournament? _tournament;
+    private Game SelectedGame = null;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        _tournament = TournamentService.GetWithAllIncludes(TournamentId);
-        if (_tournament?.Championship.ID.ToString() != ChampionshipId)
-        {
-            _tournament = null;
-        }
+        Games = GameService.GetByTournamentIdWithIncludes(TournamentId);
     }
 
+    private void SelectGame(Game game)
+    {
+        SelectedGame = game;
+        StateHasChanged();
+    }
 }
