--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/EditGame.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/EditGame.razor
@@ -68,6 +68,10 @@
     {
         if (_editState)
         {
+            SelectedGame.Winner = 
+                SelectedGame.PlayerOneScore > SelectedGame.PlayerTwoScore 
+                    ? SelectedGame.PlayerOne 
+                    : SelectedGame.PlayerTwo;
             GameService.Edit(SelectedGame);
         }
 
