--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
@@ -8,6 +8,13 @@
 <div class="row">
     <div class="responsiveColumn" style="font-size: larger">
 
+        <div>1st place</div>
+        <div></div>
+        <div>2nd place</div>
+        <div></div>
+        <div>3rd place</div>
+        <div></div>
+        
         @foreach (var game in Games)
         {
             <button style="font-size: large;width: 250px" @onclick="@(() => SelectGame(game))">
