--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
@@ -4,60 +4,69 @@
 
 @inject TournamentService TournamentService
 @inject GameService GameService
+@* *@
+@* <div class="row"> *@
+@*     <div class="responsiveColumn" style="font-size: larger"> *@
+@* *@
+@*         <h3>Statistics</h3> *@
+@*         @{ *@
+@*             var places = GetPlaces(); *@
+@*             var firstPlace = places.Item1; *@
+@*             var secondPlace = places.Item2; *@
+@*             var thirdPlace = places.Item3; *@
+@* *@
+@*             <h4>1st place</h4> *@
+@*             foreach (var place in firstPlace) *@
+@*             { *@
+@*                 <span style="padding-left: 10px">@place</span> *@
+@*             } *@
+@*             <br/> *@
+@*              *@
+@*             <h4>2nd place</h4> *@
+@*             foreach (var place in secondPlace) *@
+@*             { *@
+@*                 <span style="padding-left: 10px">@place</span> *@
+@*             } *@
+@*             <br/> *@
+@*              *@
+@*             <h4>3rd place</h4> *@
+@*             foreach (var place in thirdPlace) *@
+@*             { *@
+@*                 <span style="padding-left: 10px">@place</span> *@
+@*             } *@
+@*             <br/> *@
+@*         } *@
+@*          *@
+@*         <h3>Matches</h3> *@
+@*         @foreach (var game in Games) *@
+@*         { *@
+@*             <button style="font-size: large;width: 250px" @onclick="@(() => SelectGame(game))"> *@
+@*                 <span>@game.PlayerOne.Name</span> vs <span>@game.PlayerTwo.Name</span> *@
+@*                 <br/> *@
+@*                 <span>@game.PlayerOneScore</span> : <span>@game.PlayerTwoScore</span> *@
+@*             </button> *@
+@*         } *@
+@*     </div> *@
+@* *@
+@*     <div class="responsiveColumn second" style="font-size: larger"> *@
+@*         @if (SelectedGame != null) *@
+@*         { *@
+@*             <EditGame Refresh="StateHasChanged" SelectedGame="@SelectedGame"></EditGame> *@
+@*         } *@
+@* *@
+@*     </div> *@
+@* *@
+@* </div> *@
 
-<div class="row">
-    <div class="responsiveColumn" style="font-size: larger">
-
-        <h3>Statistics</h3>
-        @{
-            var places = GetPlaces();
-            var firstPlace = places.Item1;
-            var secondPlace = places.Item2;
-            var thirdPlace = places.Item3;
-
-            <h4>1st place</h4>
-            foreach (var place in firstPlace)
-            {
-                <span style="padding-left: 10px">@place</span>
-            }
-            <br/>
-            
-            <h4>2nd place</h4>
-            foreach (var place in secondPlace)
-            {
-                <span style="padding-left: 10px">@place</span>
-            }
-            <br/>
-            
-            <h4>3rd place</h4>
-            foreach (var place in thirdPlace)
-            {
-                <span style="padding-left: 10px">@place</span>
-            }
-            <br/>
-        }
-        
-        <h3>Matches</h3>
-        @foreach (var game in Games)
-        {
-            <button style="font-size: large;width: 250px" @onclick="@(() => SelectGame(game))">
-                <span>@game.PlayerOne.Name</span> vs <span>@game.PlayerTwo.Name</span>
-                <br/>
-                <span>@game.PlayerOneScore</span> : <span>@game.PlayerTwoScore</span>
-            </button>
-        }
-    </div>
-
-    <div class="responsiveColumn second" style="font-size: larger">
-        @if (SelectedGame != null)
-        {
-            <EditGame Refresh="StateHasChanged" SelectedGame="@SelectedGame"></EditGame>
-        }
-
-    </div>
-
-</div>
-
+@switch (Tournament.TournamentType)
+{
+    case TournamentType.AgainstEverybody:
+        <ShowTournamentAgaintsEverybody TournamentId="@TournamentId"></ShowTournamentAgaintsEverybody>
+        break;
+    case TournamentType.Spider:
+        <ShowTournamentSpider TournamentId="@TournamentId"></ShowTournamentSpider>
+        break;
+}
 
 @code{
 
@@ -67,46 +76,14 @@
     [Parameter]
     public string TournamentId { get; set; }
 
-    private List<Game> Games;
+    private Tournament Tournament;
 
-    private Game SelectedGame = null;
 
     protected override async Task OnInitializedAsync()
     {
-        Games = GameService.GetByTournamentIdWithIncludes(TournamentId);
+        Tournament = TournamentService.GetById(TournamentId);
     }
 
-    private void SelectGame(Game game)
-    {
-        SelectedGame = game;
-        StateHasChanged();
-    }
 
-    private Tuple<List<string>, List<string>, List<string>> GetPlaces()
-    {
-        var result = new Tuple<List<string>, List<string>, List<string>>(new List<string>(), new List<string>(), new List<string>());
-        var counted = Games
-            .GroupBy(
-                g => g.Winner, 
-                g => 1, 
-                (_winner, _winCount) => new {winner = _winner, winCount = _winCount.Sum()}
-        ).ToList();
-
-        counted.RemoveAll(w => w.winner == null);
-        
-        var firstPlace = counted.Where(r => r.winCount == counted.Max(w => w.winCount)).ToList();
-        result.Item1.AddRange(firstPlace.Select(w => w.winner?.Name ?? ""));
-        counted.RemoveAll(i => firstPlace.Contains(i));
-        
-        var secondPlace = counted.Where(r => r.winCount == counted.Max(w => w.winCount)).ToList();
-        result.Item2.AddRange(secondPlace.Select(w => w.winner?.Name ?? ""));
-        counted.RemoveAll(i => secondPlace.Contains(i));
-        
-        var thirdPlace = counted.Where(r => r.winCount == counted.Max(w => w.winCount)).ToList();
-        result.Item3.AddRange(thirdPlace.Select(w => w.winner?.Name ?? ""));
-        counted.RemoveAll(i => thirdPlace.Contains(i));
-
-        return result;
-    }
     
 }
