--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournamentSpider.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournamentSpider.razor
@@ -51,7 +51,7 @@
     <div class="responsiveColumn second" style="font-size: larger">
         @if (SelectedGame != null)
         {
-            <EditGame Refresh="StateHasChanged" SelectedGame="@SelectedGame"></EditGame>
+            <EditGame Refresh="@UpdatedGame" SelectedGame="@SelectedGame"></EditGame>
         }
 
     </div>
@@ -71,6 +71,12 @@
     protected override async Task OnInitializedAsync()
     {
         Games = GameService.GetByTournamentIdWithIncludes(TournamentId);
+    }
+
+    private void UpdatedGame()
+    {
+        TournamentService.ProcessSpiderGamesAndEdit(TournamentId);
+        StateHasChanged();       
     }
 
     private void SelectGame(Game game)
